create src/nextjs for demo page

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "BucketMate monorepo",
   "private": true,
   "scripts": {
+    "demo": "pnpm -F demo dev",
     "build": "pnpm -r run build",
     "clean": "pnpm -r run clean",
     "test": "pnpm -r run test",
