--- a/src/nextjs/package.json
+++ b/src/nextjs/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@bucketmate/client": "^1.0.0",
+    "@bucketmate/client": "workspace:*",
     "next": "15.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0"
