add test case for @bucketmate/client

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -17,6 +17,7 @@
     "dev": "tsc --watch"
   },
   "devDependencies": {
+    "@types/node": "^18.19.130",
     "axios": "^1.12.2",
     "dotenv": "^16.0.0",
     "vitest": "^1.0.0"
