--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -12,5 +12,6 @@
     "resolveJsonModule": true,
     "types": ["node"]
   },
-  "include": ["src/**/*", "test/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "test/**/*"]
 }
