--- a/packages/hono/tsconfig.json
+++ b/packages/hono/tsconfig.json
@@ -2,13 +2,14 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "ESNext",
+    "declaration": true,
+    "declarationDir": "./dist",
     "moduleResolution": "Node",
     "strict": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
-    "outDir": "dist",
-    
+    "outDir": "dist"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
