--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
   "scripts": {
     "demo": "pnpm -F demo dev",
     "build": "pnpm -r run build",
+    "build-packages": "pnpm -F @bucketmate/hono build; pnpm -F @bucketmate/client build",
     "clean": "pnpm -r run clean",
     "test": "pnpm -r run test",
     "dev": "pnpm -r run dev",
-    "publish:client": "pnpm --filter @bucketmate/client publish"
+
+    "publish:client": "pnpm --filter @bucketmate/client publish",
+
+    "demo-next": "pnpm -F demo-nextjs dev --port 3003",
+    "demo-hono": "pnpm -F demo-honojs dev"
   },
   "keywords": [
     "monorepo",
