--- a/src/honojs/package.json
+++ b/src/honojs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "honojs",
+  "name": "demo-honojs",
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/index.ts",
@@ -7,7 +7,9 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "@bucketmate/hono": "workspace:*",
     "@hono/node-server": "^1.19.5",
+    "dotenv": "^16.6.1",
     "hono": "^4.10.1"
   },
   "devDependencies": {
