--- a/src/nextjs/package.json
+++ b/src/nextjs/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@bucketmate/client": "workspace:*",
+    "@bucketmate/nextjs": "workspace:*",
     "next": "15.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0"
