update bucketmate/nextjs package and the demo

--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -9,7 +9,8 @@
     ".": {
       "types": "./dist/index.d.ts",
       "default": "./dist/index.js"
-    }
+    },
+    "./dist/index.js": "./dist/index.js"
   },
   "dependencies": {
     "@bucketmate/client": "workspace:*",
